--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-
-/* Footer styles */
+/* Footer */
 
 .footer {
   padding: 20px;
@@ -33,4 +32,19 @@
 .footer-links a:hover {
   text-decoration: underline;
 }
+
+.quarto-listing-category {
+  font-size: 0.1em; /* Makes the text smaller for default categories */
+}
+
+.navbar-logo {
+  border-radius: 50%; /* Crop the logo into a circle */
+  object-fit: cover; /* Ensure the image scales properly within the circle */
+  display: block; /* Prevent inline elements from affecting dimensions */
+  max-height: 50px;
+
+}
+
+
+
 
