Change listings picture size to be 200x200
Create transition effect on navbar logo. Misc styling changes.

--- a/_templates/custom-listing.ejs
+++ b/_templates/custom-listing.ejs
@@ -38,13 +38,14 @@
 }
 
 .listing-image img {
-  width: 150px; /* Increased image width */
-  height: 150px; /* Increased image height */
-  object-fit: cover;
+  width: 200px; /* Increased image width */
+  height: 200px; /* Increased image height */
+  object-fit: cover;  /* consider using 'cover', 'fill', or 'contain' */
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-right: 30px; /* Added more space between the image and content */
   transition: transform 0.75s ease; /* Smooth transition for hover effect */
+  background-color: #ddd;
 }
 
 .listing-image img:hover {
