--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,10 @@
   left: auto !important;
 }
 
+.dropdown-menu .dropdown-item {
+  color: #000; /* Set text color to black or any visible color */
+}
+
 
 /* TOC adjustments */
 
